--- a/Neon-X/templates/index.html
+++ b/Neon-X/templates/index.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Neon-X Chat</h1>
-                <p>Welcome to Neon-X Chat!</p>
-            </div>
-        </div>
-    </div>
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+<h1>Home</h1>
+<p>Start your adventure here</p>
+</div>
+</div></div>
 {% endblock %}
