--- a/Neon-X/static/style.css
+++ b/Neon-X/static/style.css
@@ -7,7 +7,7 @@ body {
 
 .chat-container {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     border: 1px solid #fff;
     padding: 20px;
     border-radius: 10px;
@@ -32,6 +32,8 @@ body {
     padding: 20px;
     flex-grow: 1;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .chat-body ul {
@@ -52,16 +54,18 @@ body {
 
 .message-bubble.assistant {
     background-color: #666;
-    float: left;
+    align-self: flex-start;
+    max-width: 40%;
 }
 
 .message-bubble.user {
     background-color: #888;
-    float: right;
+    align-self: flex-end;
+    max-width: 40%;
 }
 
 .input-field {
-    width: 100%;
+    width: 80%;
     height: 40px;
     padding: 10px;
     border: 1px solid #fff;
@@ -74,7 +78,7 @@ body {
 }
 
 .submit-button {
-    width: 100%;
+    width: 20%;
     height: 40px;
     background-color: #444;
     color: #fff;
@@ -99,12 +103,9 @@ body {
     width: 100%;
     padding: 10px;
     background-color: #333;
+    display: flex;
 }
 
 .input-container .input-field {
-    width: 80%;
-}
-
-.input-container .submit-button {
-    width: 20%;
+    margin-right: 10px;
 }
